--- a/examples/map.html
+++ b/examples/map.html
@@ -13,7 +13,8 @@
 <div id="map" width = '100%' height = '100%'></div>
 
 <script>
-    var map = new d3map.map('map',{center: [5,52],zoom: 22});
+    var elem = document.getElementById('map');
+    var map = new d3map.map(elem,{center: [5,52],zoom: 22});
     
     var layer = new d3map.Rasterlayer('layer1', map, {
             type: 'tms',
